# afterlife

./: .gitignore  LICENSE  README.md  demo.tape  life.py  life_bench.py  life_music.py  life_music_diag.py  pyproject.toml
